# smartp

./: .gitignore  flake.nix  pyproject.toml
smartp/: main.py  smarttester.py
